--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Jumana's Site</title>
-    <link rel="stylesheet" href="css/jumana's site.css">
+    <link rel="stylesheet" href="jumana's site.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 </head>
 
     
 <body>
     <table cellspacing="20">
-        <tr><td><img src="file:///C:/Users/MAC/Downloads/cropped_image.png" width="150" height="150" alt="girl"></td>
+        <tr><td><img src="cropped_image.png" width="150" height="150" alt="girl"></td>
         <td>
             <h1>Jumana Al-Thaibi &#128103</h1>
             <b><i>
